[package]
name = "android"
version = "0.0.1"
authors = ["LeRoyce Pearson <leroycepearson@geemili.xyz>"]
build = "build.rs"
edition = "2018"

[lib]
name = "mobcore"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
log-panics = "2.0"
android_logger = "0.8"

[build-dependencies]
rust_swig = "0.3"
bindgen = "0.49.0"
walkdir = "2.2.7"
