[package]
name = "augr-cli"
version = "0.2.0"
authors = ["LeRoyce Pearson <leroycepearson@geemili.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A simple command line time tracking application"
repository = "https://github.com/geemili/augr"
keywords = ["cli", "timetracking"]
categories = ["command-line-utilities"]

[[bin]]
name = "augr"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.2"
clap = "2.33"
directories = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
snafu = "0.4"
parse_duration = "1.0"
augr-core = { path = "../core", version = "0.2.0" }
uuid = "0.7"

[badges]
travis-ci = { repository = "geemili/augr" }
