[package]
name = "augr-cli"
version = "0.2.2-dev"
authors = ["LeRoyce Pearson <leroycepearson@geemili.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A simple command line time tracking application"
repository = "https://github.com/geemili/augr"
keywords = ["cli", "timetracking"]
categories = ["command-line-utilities"]

[[bin]]
name = "augr"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
clap = "2.33"
directories = "2.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
snafu = "0.5"
parse_duration = "1.0"
augr-core = { path = "../core", version = "0.2.2-dev" }
uuid = "0.7"

flame = { version = "0.2.2", optional = true }
flamer = { version = "0.4", optional = true }

[features]
default = []
flame_it = ["flame", "flamer", "augr-core/flame_it"]

[badges]
travis-ci = { repository = "geemili/augr" }
