[package]
name = "augr-core"
version = "0.1.0"
authors = ["LeRoyce Pearson <leroycepearson@geemili.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = [ "derive" ] }
snafu = "0.4"
toml = "0.5"
