[package]
name = "augr-core"
version = "0.2.0"
authors = ["LeRoyce Pearson <leroycepearson@geemili.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "The backend of a simple command line time tracking application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = [ "derive" ] }
snafu = "0.4"
toml = "0.5"
uuid = { version = "0.7", features = ["serde", "v4"] }

flame = { version = "0.2.2", optional = true }
flamer = { version = "0.3", optional = true }

[features]
default = []
flame_it = ["flame", "flamer"]

